@@ -7,7 +7,7 @@
 cumNormStatFast(obj, pFlag = FALSE, rel = 0.1, ...)
 }
 \arguments{
-\item{obj}{A MRexperiment object.}
+\item{obj}{A matrix or MRexperiment object.}
 
 \item{pFlag}{Plot the median difference quantiles.}
 
